Setup for day 2

--- a/AoC2022/AoC2022.fsproj
+++ b/AoC2022/AoC2022.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="Common\CommonFuncs.fs" />
     <Compile Include="Day1\Day1.fs" />
+    <Compile Include="Day2\Day2.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
