Added basis for the rest of the AoC days

--- a/AoC2022/AoC2022.fsproj
+++ b/AoC2022/AoC2022.fsproj
@@ -1,15 +1,35 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Common\CommonFuncs.fs" />
     <Compile Include="Day1\Day1.fs" />
     <Compile Include="Day2\Day2.fs" />
+	<Compile Include="Day3\Day3.fs" />
+    <Compile Include="Day4\Day4.fs" />
+    <Compile Include="Day5\Day5.fs" />
+    <Compile Include="Day6\Day6.fs" />
+    <Compile Include="Day7\Day7.fs" />
+    <Compile Include="Day8\Day8.fs" />
+    <Compile Include="Day9\Day9.fs" />
+    <Compile Include="Day10\Day10.fs" />
+    <Compile Include="Day11\Day11.fs" />
+    <Compile Include="Day12\Day12.fs" />
+    <Compile Include="Day13\Day13.fs" />
+    <Compile Include="Day14\Day14.fs" />
+    <Compile Include="Day15\Day15.fs" />
+    <Compile Include="Day16\Day16.fs" />
+    <Compile Include="Day17\Day17.fs" />
+    <Compile Include="Day18\Day18.fs" />
+    <Compile Include="Day19\Day19.fs" />
+    <Compile Include="Day20\Day20.fs" />
+    <Compile Include="Day21\Day21.fs" />
+    <Compile Include="Day22\Day22.fs" />
+    <Compile Include="Day23\Day23.fs" />
+    <Compile Include="Day24\Day24.fs" />
+    <Compile Include="Day25\Day25.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
 </Project>
